@@ -9,13 +9,14 @@ DATE : 3/16/2022 9:25 PM
 
 import guru.springframework.recipeapp.commands.RecipeCommand;
 import guru.springframework.recipeapp.services.RecipeService;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.ModelAttribute;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.*;
 
+import java.util.concurrent.atomic.LongAdder;
+
+@Slf4j
 @Controller
 public class RecipeController {
     private final RecipeService recipeService;
@@ -24,23 +25,48 @@ public class RecipeController {
         this.recipeService = recipeService;
     }
 
-    @RequestMapping("/recipe/show/{id}")
-    public String showById(@PathVariable String id, Model model) {
-        model.addAttribute("recipe", recipeService.findById(new Long(id)));
+    @GetMapping
+    @RequestMapping("/recipe/{id}/show")
+    public String showById(@PathVariable String id, Model model){
+
+        model.addAttribute("recipe", recipeService.findById(Long.valueOf(id)));
         return "recipe/show";
     }
 
+    @GetMapping
     @RequestMapping("recipe/new")
-    public String create(Model model) {
+    public String createRecipeForm(Model model){
         model.addAttribute("recipe", new RecipeCommand());
         return "recipe/form";
     }
 
-    @PostMapping
-    @RequestMapping("recipe")
-    public String saveOrUpdate(@ModelAttribute RecipeCommand recipeCommand) {
-        RecipeCommand savedCommand = recipeService.saveRecipeCommand(recipeCommand);
-
-        return "redirect:/recipe/show/" + savedCommand.getId();
+    @GetMapping
+    @RequestMapping("recipe/{id}/update")
+    public String updateRecipeForm(@PathVariable String id, Model model){
+        model.addAttribute("recipe", recipeService.findRecipeCommandById(Long.valueOf(id)));
+        return  "recipe/form";
     }
+
+
+    @PostMapping("recipe")
+    public String saveRecipe(@ModelAttribute RecipeCommand command){
+        RecipeCommand savedCommand = recipeService.saveRecipeCommand(command);
+        return "redirect:/recipe/" + savedCommand.getId() + "/show";
+    }
+
+    @PutMapping("recipe")
+    public String updateRecipe(@ModelAttribute RecipeCommand command) {
+        RecipeCommand updatedCommand = recipeService.saveRecipeCommand(command);
+        return "redirect:/recipe/" + updatedCommand.getId() + "/show";
+    }
+
+    @GetMapping
+    @RequestMapping("recipe/{id}/delete")
+    public String deleteRecipe(@PathVariable String id) {
+        log.debug("Deleting id: " + id);
+        recipeService.deleteById(Long.valueOf(id));
+        return "redirect:/";
+    }
+
+
 }
